package api.models.projects;

public class ParentProject {
    private String id;
    private String name;
    private String description;
    private String href;
    private String webUrl;
}
