package api.models.projects;

public class ProjectFeatures {
    private int count;
    private String href;
}
