package api.models.projects;

public class VcsRoots {
    private int count;
    private String href;
}
